[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "svdoc"
version = "0.1.0"
description = "pydoc-style documentation generator for SystemVerilog RTL"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = ["pyslang>=11.0.0"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
]

[project.optional-dependencies]
docs = ["sphinx", "sphinx-rtd-theme"]
dev = ["ruff"]

[project.scripts]
svdoc = "svdoc.cli:main"

[tool.setuptools]
packages = ["svdoc"]
